- Fixed bug #42233 (Problems with Ã¦Ã¸Ã¥ in extract()).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@240874 c90b9560-bf6c-de11-be94-00142212c4b1